# rag_complaint_chatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py
app/: db.py  intent_extraction.py  rag_engine.py
ui/: ui_app.py
